--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -36,9 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
   riverpod_generator: ^2.6.5
-  dio: ^5.8.0+1
   shared_preferences: ^2.5.3
   go_router: ^16.0.0
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
