--- a/flutter_app/android/build.gradle
+++ b/flutter_app/android/build.gradle
@@ -1,3 +1,20 @@
+// android/build.gradle
+// --- COMPLETE CORRECTED VERSION ---
+
+buildscript {
+    ext.kotlin_version = '1.9.23' 
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        // Make sure this line has the correct version
+        classpath 'com.android.tools.build:gradle:8.3.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -5,12 +22,12 @@ allprojects {
     }
 }
 
-rootProject.buildDir = "../build"
+rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 subprojects {
-    project.evaluationDependsOn(":app")
+    project.evaluationDependsOn(':app')
 }
 
 tasks.register("clean", Delete) {
